--- a/src/frontend/setup/setup.css
+++ b/src/frontend/setup/setup.css
@@ -355,7 +355,7 @@ input[type="checkbox"] {
     }
 
     .fluentButton {
-        background-color: #2b2b2b;
+        background-color: #202020;
     }
 
     #menuArea p {
@@ -371,7 +371,7 @@ input[type="checkbox"] {
     }
 
     #chitenListCheck {
-        background-color: #2b2b2b;
+        background-color: #3c3c3c;
     }
 
     #topArea {
@@ -413,10 +413,6 @@ input[type="checkbox"] {
         color: #ffffff;
     }
 
-    input[type="checkbox"] {
-        color: #202020;
-    }
-
     #resetListCheck {
         background-color: #2b2b2b;
         color: #ffffff;
@@ -445,6 +441,11 @@ input[type="checkbox"] {
     ::-webkit-scrollbar-thumb {
         background: #9f9f9f;
         border-radius: 10px;
+    }
+
+    input{
+        background: #3c3c3c;
+        color:#ffffff;
     }
 
 }
