--- a/src/frontend/setup/setup.css
+++ b/src/frontend/setup/setup.css
@@ -26,7 +26,6 @@ body {
     background-color: #f3f3f3;
 }
 
-
 #menuArea {
     width: 30%;
     padding: 10px;
@@ -518,7 +517,8 @@ input[type="checkbox"] {
 
 .time-input-group span {
     font-size: 20px;
-    margin: 0 5px;
+    margin: 0px;
+    width: fit-content;
 }
 
 .time-input-group input[type=number] {
